--- a/admin/style/style.css
+++ b/admin/style/style.css
@@ -346,7 +346,7 @@ button:hover:not(:disabled) {
 }
 
 .crud-table.crud-style-1 thead {
-    background-color: #f69575;
+    background-color: #7597f6;
     color: #fff;
 }
 
