--- a/CSS/prompt.css
+++ b/CSS/prompt.css
@@ -40,6 +40,9 @@
 
 .prompt form textarea {
     resize: none;
+    padding: 10px;
+    text-indent: 0;
+    line-height: 24px;
 }
 
 .prompt form select {
